sea-query-derive/tests/compile-fail/path_method.rs
use sea_query::Iden;

#[derive(Iden)]
enum Asset {
    Table,
    Id,
    AssetName,
    #[method]
    Creation,
}

fn main() {}
